api: add new /settings endpoint
